# modula

./: .gitignore  .gitmodules  README.md  deeponet_weights.npz  pyproject.toml
KPDE-PID/: .gitignore  controllers.py  deeponet.py  experiment_animated_patterns.py  experiment_comparison.py  experiment_multidrone.py  export_predictions_for_html.py  export_weights.py  flow_dataset.py  main.py  physics_models.py  pinn_server.py  training.py  turbulence_visualization.html
docs/source/algorithms/manifold/: index.rst  orthogonal.rst  stiefel.rst
examples/: cifar10.py  cifar_cnn_benchmark.ipynb  cifar_gan.py  cifar_lipschtz_gan.py  cnn_mnist.py  continual_cifar.py  continual_cifar100.py  conv2d_mnist.ipynb  drone.py  gan.py  gpt.py  hello-gpt.ipynb  hello-world.ipynb  mnist.py  mnist_gan.py  old_mnist.py  permuted_mnist.py
examples/WIPs/: bi-linear.py  bilevel_mnist.py  neural-game.py
examples/data/: cifar100.py
manifold_muon/: manifold_muon.py
modula/: __init__.py  abstract.py  atom.py  bond.py  manifold.py
notebooks/: conv2d_mnist.ipynb
scripts/: cifar.sh  cifar_gan.sh  gan.sh  lipschitz_gan.sh  mnist_gan.sh  pmnist.sh  rl.sh
