[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "modula"
version = "0.0.0.0.0.2"
authors = [
    { name="Jeremy Bernstein", email="jbernstein@mit.edu" },
]
description = "Numerically sound neural network library."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
]
dependencies = [
    "jax[cuda12]>=0.4.30",
    "matplotlib>=3.9.4",
    "optax>=0.2.4",
    "pyflyt>=0.21.0",
    "tqdm>=4.67.1",
]


[tool.setuptools]
packages = ["modula"]

[project.urls]
"Homepage" = "https://modula.systems/"
"Repository" = "https://github.com/modula-systems/modula"
"Bug Tracker" = "https://github.com/modula-systems/modula/issues"
"Documentation" = "https://docs.modula.systems/"
